--- a/sandracv.html
+++ b/sandracv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sandra Riordan - Sustainable Energy & Science Research Professional</title>
+    <title>Sandra Riordan PhD - Sustainable Energy & Science Research Professional</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -282,7 +282,7 @@
         <main class="w-full md:w-2/3 lg:w-3/4 bg-cv-bg-main p-6 md:p-8 md:order-2">
              <header class="mb-6 flex flex-wrap justify-between items-start">
                  <div>
-                     <h1 class="text-4xl md:text-5xl font-bold font-heading text-cv-text-dark tracking-tight">SANDRA RIORDAN</h1>
+                     <h1 class="text-4xl md:text-5xl font-bold font-heading text-cv-text-dark tracking-tight">SANDRA RIORDAN PhD</h1>
                      <p class="text-xl font-heading text-cv-accent mt-1">Sustainable Energy & Science Research Professional</p>
                  </div>
                  <div class="mt-2 md:mt-0 md:ml-4 print:hidden">
@@ -292,7 +292,7 @@
             <section class="mb-8">
                 <h2 class="text-2xl font-semibold font-heading text-cv-accent mb-3 sr-only">Profile Summary</h2>
                 <p class="text-cv-text-med leading-relaxed text-base border-t border-cv-border pt-4">
-                    A dedicated and experienced professional with a strong background in Science Research & Development and Engineering, complemented by a Certification in Sustainable Energy. A dedicated advocate for sustainability and an active steward of environmental conservation. Accomplished project manager with a proven track record in data management and team coordination, overseeing compliance and training initiatives across multiple sectors. I strive to make science accessible and engaging for all, leveraging my broad life experiences, strong interpersonal and communication skills, and adaptability to excel as an enthusiastic team player and effective leader.
+                    A dedicated and experienced professional with a PhD in Organic Chemistry, complemented by a strong background in industry based science research & development and engineering, as well as a Certification in Sustainable Energy. An advocate for sustainability and an active steward of environmental conservation. Accomplished project manager with a proven track record in data management and team coordination, overseeing compliance and training initiatives across multiple sectors. I am committed to making science accessible and engaging for all, leveraging my extensive educational and life experiences, strong interpersonal and communication skills, and adaptability to excel as an enthusiastic team player and effective leader.
                 </p>
             </section>
 
@@ -305,9 +305,9 @@
                             <span>Project Management Experience</span>
                         </div>
                         <h3 class="text-lg font-semibold font-heading text-cv-text-dark">Project Manager</h3>
-                        <p class="text-xs text-cv-text-dim mb-3 uppercase tracking-wider">Galway Energy Coop (EU Project)</p>
+                        <p class="text-xs text-cv-text-dim mb-3 uppercase tracking-wider"></p>
                         <ul class="list-disc list-outside space-y-2 pl-5 text-cv-text-med text-sm marker:text-cv-accent mb-4">
-                            <li>Results-driven professional with extensive experience in data management and team leadership, successfully leading collaborative working groups for an EU project with Galway Energy Coop, with a focus on data management and marketing, including meticulous collation of project metrics.</li>
+                            <li>Results-driven professional with extensive experience in data management and team leadership, successfully leading collaborative working groups for an EU project with focus on data management and marketing, including meticulous collation of project metrics.</li>
                         </ul>
                         <h3 class="text-lg font-semibold font-heading text-cv-text-dark">Cleaning Validation Programme Manager</h3>
                         <ul class="list-disc list-outside space-y-2 pl-5 text-cv-text-med text-sm marker:text-cv-accent mb-4">
@@ -453,7 +453,7 @@
             </section>
 
             <section>
-                <h2 class="text-2xl font-semibold font-heading text-cv-accent mb-4">Education History</h2>
+                <h2 class="text-2xl font-semibold font-heading text-cv-accent mb-4">University College Dublin</h2>
 
                 <div class="tab-buttons-container mb-0 border-b border-cv-border flex flex-wrap -mb-px" role="tablist" aria-label="Education History Tabs">
                     <button class="tab-button active" role="tab" aria-selected="true" aria-controls="tab-phd" id="btn-phd">
@@ -575,7 +575,6 @@
                     <p>Galway, Ireland</p>
                     <p><a href="mailto:sandra.riordan@gmail.com" class="hover:text-cv-accent-hover transition-colors duration-200 block">sandra.riordan@gmail.com</a></p>
                     <p><a href="https://www.linkedin.com/in/sandra-riordan-a536862a" class="hover:text-cv-accent-hover transition-colors duration-200 block">www.linkedin.com/in/sandra-riordan-a536862a</a></p>
-                    <p><a href="https://chemistrygrinds.com/" class="hover:text-cv-accent-hover transition-colors duration-200 block">chemistrygrinds.com/</a></p>
                 </address>
                  <button id="print-button" class="mt-4 w-full inline-flex items-center justify-center px-4 py-2 border border-cv-accent text-sm font-medium rounded-md text-cv-accent bg-white hover:bg-cv-accent hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cv-accent transition-colors duration-200 print:hidden">
                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2" viewBox="0 0 20 20" fill="currentColor">
@@ -620,7 +619,7 @@
                 <h2 class="font-poppins text-lg font-semibold text-cv-accent uppercase tracking-wider mb-3">Memberships</h2>
                  <ul class="space-y-1 text-sm list-inside text-cv-text-dark marker:text-cv-accent">
                         <li>Research Director on the board of Galway Energy Co Operative</li>
-                        <li>Volunteer for Transition Galway’s 2030 Vision for Galway (ref. <a href="https://avisionforgalway2030.wordpress.com" class="hover:text-cv-accent-hover transition-colors duration-200">avisionforgalway2030.wordpress.com</a>)</li>
+                        <li>Volunteer for Transition Galway’s 2030 Vision for Galway</li>
                         <li>WITS Ireland Member</li>
                  </ul>
             </section>
